<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    android:paddingLeft="18dp"
    tools:context=".MainActivity" >

    <edu.pitt.cs1635.ccc35.proj2.DrawActivity
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/sText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="11dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="54dp"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/sText"
        android:text="@string/save"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button6"
        android:onClick="loadFile"
        android:text="@string/load"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button5"
        android:onClick="submitInput"
        android:text="@string/send"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_above="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:onClick="setColor"
        android:text="@string/color"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_above="@+id/button5"
        android:layout_toLeftOf="@+id/button1"
        android:onClick="clearInput"
        android:text="@string/clear"
        android:textSize="10sp" />

</RelativeLayout>